tests/NormalTests/paczka1/fuzzy1/78713950.err
Error in line 1: Ve5WZ0ZTf S12 65,0
Error in line 4: Ve5WZ0ZTf A667 17,2
Error in line 7: 7jsxL1 S615 24,4
Error in line 9: Ve5WZ0ZTf A848 264,1
Error in line 12: Ve5WZ0ZTf S615 14,8
Error in line 22: WMBiq A667 13,6
Error in line 25: 7jsxL1 S12 3,1
Error in line 31: WMBiq S12 65,56
Error in line 33: ipLs1 S12 47,2
Error in line 20: 1cQX5sglCM S615 266,8
Error in line 35: 1cQX5sglCM A848 37,3
